<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/menus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp">

        <RelativeLayout
            android:id="@+id/menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:id="@+id/num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/sriracha_regular"
                    android:textSize="55sp"/>

                <TextView
                    android:id="@+id/dia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/num"
                    android:layout_marginTop="-22dp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/sriracha_regular"
                    android:textSize="22sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/comida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comida"
                    android:textSize="23sp"
                    android:fontFamily="@font/sriracha_regular"/>
                <TextView
                    android:id="@+id/txtcom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textSize="21sp"
                    android:fontFamily="@font/indieflower_regular"
                    android:layout_below="@+id/comida"
                    android:layout_marginTop="-5dp"/>
                <TextView
                    android:id="@+id/cena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtcom"
                    android:textSize="23sp"
                    android:fontFamily="@font/sriracha_regular"
                    android:text="@string/cena" />
                <TextView
                    android:id="@+id/txtcen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/indieflower_regular"
                    android:textSize="21sp"
                    android:layout_marginTop="-5dp"
                    android:layout_below="@+id/cena"/>
            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/content"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:id="@+id/num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/sriracha_regular"
                    android:textSize="55sp"/>

                <TextView
                    android:id="@+id/dia2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/num2"
                    android:layout_marginTop="-22dp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/sriracha_regular"
                    android:textSize="22sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/comida2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comida"
                    android:textSize="23sp"
                    android:fontFamily="@font/sriracha_regular"/>

                <TextView
                    android:id="@+id/txtcom2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textSize="21sp"
                    android:fontFamily="@font/indieflower_regular"
                    android:layout_below="@+id/comida2"
                    android:layout_marginTop="-5dp"/>

                <TextView
                    android:id="@+id/cena2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtcom2"
                    android:textSize="23sp"
                    android:fontFamily="@font/sriracha_regular"
                    android:text="@string/cena" />

                <TextView
                    android:id="@+id/txtcen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/indieflower_regular"
                    android:textSize="21sp"
                    android:layout_marginTop="-5dp"
                    android:layout_below="@+id/cena2"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_semanal"
        android:layout_below="@+id/menus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="fullMenu"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/loadingGif"
                android:layout_width="133dp"
                android:layout_height="78dp"
                android:visibility="invisible" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation"
        app:labelVisibilityMode="unlabeled"/>
</RelativeLayout>